# agent

./: .gitignore  README.md
backend/: .env  .env.example  README.md  STATUS  api_server.py  check_neo4j_status.py  clear_neo4j.py  dingtalk_files_list.json  docker-compose.yml  main.py  monitor_progress.sh  products_info.xlsx  pyproject.toml  restore_product_data.py  run_dingtalk_pipeline.py  test_dingtalk_pipeline.py
backend/archieve/: agents_extract.py  analyze_order.py  docker-compose.baK_seaweedfs  docker-compose.bak  extract_docx.py  extract_with_python_docx.py  io_manager.py  mineru_demo.py  ref_BOM_accessories.json  test.md  test.py  test_data_pdf.py  test_data_word.py  test_litellm.py  test_llm.py  test_mineru.py  test_neo4j_addpath.py  test_neo4j_create_vector.py  test_neo4j_create_vector_back.py
backend/bom_auto_results/: 20251209-104603_OCR__outdoor.json
backend/data_test/: ref_BOM.md  ref_BOM.xlsx  ref_BOM_products.json  ref_BOM_products.xlsx  ref_language.xlsx  test.doc  test.docx  translate_accessories.xlsx
backend/src/: ace_integration.py  api_queries.py  bom_config.py  bom_models.py  bom_storage.py  capsule_generator.py  category_taxonomy.py  data_excel.py  data_image.py  data_pdf.py  data_word.py  dataclass.py  dingtalk_auth.py  dingtalk_batch_processor.py  dingtalk_downloader.py  dingtalk_file_explorer.py  dingtalk_neo4j_importer.py  dingtalk_storage.py  extract_file_from_raw_folder.py  extract_node_name_from_xlsx.py  file_classifier.py  image_library.py  manual_book.py  manual_ocr.py  manual_progress.py  models_litellm.py  neo4j_analysis.py  (+17 more)
(+489 files in other folders)
